# SF

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  log.sf
editor/emacs/: README.md  sf-mode.el
editor/vscode/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package.json  sf-lang-0.1.0.vsix
editor/vscode/syntaxes/: sf.tmLanguage.json
examples/: class.sf  enum.sf  func.sf  interface.sf  stmt.sf  test00.sf
lib/elaborate/: CMakeLists.txt  elab.cpp  elab.hpp  syntax.cpp  syntax.hpp  table.cpp  table.hpp
lib/parsing/: CMakeLists.txt  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  syntax.cpp  syntax.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
